--- a/home.html
+++ b/home.html
@@ -106,11 +106,13 @@
     <text x="0" y="100"></text>
 </g>
 </svg>
+	
+	
 
 
 	
 
 <body bgcolor="#0000000">
-	
+	<img src="http://vignette1.wikia.nocookie.net/domovoy/images/a/a7/%D0%92%D1%81%D1%91_%D0%BE%D1%87%D0%B5%D0%BD%D1%8C_%D0%BF%D0%BB%D0%BE%D1%85%D0%BE.png/revision/latest?cb=20150205073408&path-prefix=ru" style="position:absolute; bottom:50%; right:50%" >
 </body>
 </html>
